feat(exercise05): betting system with client-server communication for lottery

--- a/docker-compose-dev.yaml
+++ b/docker-compose-dev.yaml
@@ -18,6 +18,11 @@ services:
     entrypoint: /client
     environment:
       - CLI_ID=1
+      - NOMBRE=Santiago Lionel
+      - APELLIDO=Lorca
+      - DOCUMENTO=30904465
+      - NACIMIENTO=1999-03-17
+      - NUMERO=7574
     volumes:
       - ./client/config.yaml:/config.yaml:ro
     networks:
