feat(exercise06): batch processing for bets with configurable max amount

--- a/docker-compose-dev.yaml
+++ b/docker-compose-dev.yaml
@@ -25,6 +25,7 @@ services:
       - NUMERO=7574
     volumes:
       - ./client/config.yaml:/config.yaml:ro
+      - ./client/dataset.zip:/dataset.zip:ro
     networks:
       - testing_net
     depends_on:
