--- a/docker-compose-dev.yaml
+++ b/docker-compose-dev.yaml
@@ -7,6 +7,7 @@ services:
     entrypoint: python3 /main.py
     environment:
       - PYTHONUNBUFFERED=1
+      - NUM_AGENCIES=1
     volumes:
       - ./server/config.ini:/server/config.ini:ro
     networks:
